--- a/merkle-tree/package.json
+++ b/merkle-tree/package.json
@@ -14,24 +14,26 @@
     "Michael Connor <Michael.Connor@uk.ey.com>"
   ],
   "dependencies": {
+    "amqplib": "^0.6.0",
     "axios": "^0.21.1",
+    "big-integer": "^1.6.48",
     "body-parser": "^1.19.0",
+    "config": "^3.2.2",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
-    "request": "^2.88.0",
-    "cors": "^2.8.5",
-    "config": "^3.2.2",
-    "big-integer": "^1.6.48",
-    "web3": "^1.3.0",
-    "mongoose": "^5.7.5",
-    "winston": "^3.1.0",
-    "winston-daily-rotate-file": "^3.4.1",
-    "safe-buffer": "^5.1.2",
-    "solc": "0.5.8",
     "fs-extra": "^8.1.0",
     "hex-to-binary": "^1.0.1",
+    "jsonfile": "^5.0.0",
     "keccak": "^2.1.0",
-    "jsonfile": "^5.0.0"
+    "mongoose": "^5.7.5",
+    "redis": "^4.0.6",
+    "request": "^2.88.0",
+    "safe-buffer": "^5.1.2",
+    "solc": "0.5.8",
+    "web3": "^1.3.0",
+    "winston": "^3.1.0",
+    "winston-daily-rotate-file": "^3.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -39,7 +41,7 @@
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
-    "nodemon": "^1.19.4",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4"
   }
 }
